tests/NormalTests/paczka2/big_fuzzy/36308955.err
Error in line 14: oeJZsXN S616 4,9
Error in line 9: xL9opBWcsY S616 72,0
Error in line 18: xL9opBWcsY A580 36,0
Error in line 13: ybMLWCdxm S616 13,4
Error in line 24: ybMLWCdxm A580 23,4
Error in line 30: DM8rRHhU S616 89,5
Error in line 38: AMt A580 85,3
Error in line 50: 6I8dxeqeG S616 -2,5
Error in line 33: 6I8dxeqeG S616 24,2
Error in line 55: 6I8dxeqeG A276 30,4
Error in line 58: AMt S616 7,8
Error in line 67: A276 A580 68,8
Error in line 66: AMt S691 87,4
Error in line 85: xL9opBWcsY A580 7,4
Error in line 74: AMt A276 33,2
Error in line 99: AMt S616 70,7
Error in line 101: oeJZsXN S691 -2,9
Error in line 100: AMt A580 98,6
Error in line 83: DM8rRHhU A276 59,5
Error in line 128: 6I8dxeqeG A276 92,1
Error in line 124: ybMLWCdxm A276 41,0
Error in line 139: AMt A580 35,6
Error in line 155: AMt S691 28,6
Error in line 158: DM8rRHhU S691 22,7
Error in line 162: A276 S691 73,9
Error in line 137: 6I8dxeqeG S616 121,3
Error in line 167: 6I8dxeqeG S691 68,6
Error in line 184: ybMLWCdxm A580 63,Q
Error in line 194: AMt A276 98,9
Error in line 200: ybMLWCdxm S691 192,8
Error in line 206: ybMLWCdxm A276 64,9
Error in line 209: xL9opBWcsY A580 -5,3
Error in line 203: xL9opBWcsY A580 77,6
Error in line 233: AMt S691 76,9
Error in line 218: oeJZsXN S691 30,0
Error in line 238: oeJZsXN A580 20,0
Error in line 240: oeJZsXN S691 32,1
